--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
 kotlin.code.style=official
 xcodeproj=./iosApp
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx3g
+org.gradle.jvmargs=-Xmx386m
 org.gradle.configuration-cache=true
 org.gradle.caching=true
+org.gradle.parallel=false
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.macos.enabled=true
 kotlin.native.useEmbeddableCompilerJar=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 # Enable kotlin/native experimental memory model
 kotlin.native.binary.memoryModel=experimental
-kotlin.version=1.9.23
+kotlin.version=2.0.0
 agp.version=8.0.2
-compose.version=1.6.2
+compose.version=1.6.10
